--- a/pages/Services.html
+++ b/pages/Services.html
@@ -20,7 +20,9 @@
 					</ul>
 				</nav>
 			</div>
-			<div class="bods">
+		</div>
+		<div>
+			<div class="T-section">
 			<h1 class="serv-type">Z Training Services</h1>
 				<a href="#E-1" class="serv-btn"><div class="serv , dumbells">
 					<h5>Equipments</h5>		
