--- a/pages/Services.html
+++ b/pages/Services.html
@@ -6,7 +6,6 @@
 		<script src="https://kit.fontawesome.com/887a835504.js"></script> <!--Added for buttons only-->
 		<title>Services</title>
 	</head>
-	
 	<body>
 		<div class="container-service">
 			<div class="nav-bar">
@@ -23,17 +22,17 @@
 		</div>
 		<div>
 			<div class="T-section">
-			<h1 class="serv-type">Z Training Services</h1>
-				<a href="#E-1" class="serv-btn"><div class="serv , dumbells">
+			<div class="T-title"><h1 class="serv-type">Z Training Services</h1></div>
+				<a href="#E-1" class="serv-btn , T-nav"><div class="serv , dumbells">
 					<h5>Equipments</h5>		
 				</div></a>
-				<a href="#T-1" class="serv-btn"><div class="serv , train">
+				<a href="#T-1" class="serv-btn , T-nav"><div class="serv , train">
 					<h5>Training</h5>		
 				</div></a>
-				<a href="#C-1" class="serv-btn"><div class="serv , calendar">
+				<a href="#C-1" class="serv-btn , T-nav"><div class="serv , calendar">
 					<h5>Classes</h5>		
 				</div></a>
-				<a href="#W-1" class="serv-btn"><div class="serv , apple">
+				<a href="#W-1" class="serv-btn , T-nav"><div class="serv , apple">
 					<h5>Wellness</h5>
 				</div></a>
 			</div>
