--- a/pages/Registration.html
+++ b/pages/Registration.html
@@ -7,7 +7,7 @@
 	</head>
 	
 	<body>
-		<div class="container-registration">
+		<div class="container">
 			<div class="nav-bar">
 				<img src= "../src/logo.png" class="logo">
 				<nav>
@@ -19,7 +19,9 @@
 					</ul>
 				</nav>
 			</div>
-			<div class="bods">
+		</div>
+		<div>
+			<div class="R-section">
 				<fieldset>
 					<h1>Registration Form</h1>
 					<form class="form" action="#" method="post">
