--- a/pages/Services.html
+++ b/pages/Services.html
@@ -7,7 +7,7 @@
 		<title>Services</title>
 	</head>
 	<body>
-		<div class="container-service">
+		<div class="container">
 			<div class="nav-bar">
 				<img src= "../src/logo.png" class="logo">
 				<nav>
@@ -21,8 +21,8 @@
 			</div>
 		</div>
 		<div>
-			<div class="T-section">
-			<div class="T-title"><h1 class="serv-type">Z Training Services</h1></div>
+			<div class="S-section">
+			<div class="S-title"><h1 class="serv-type">Z Training Services</h1></div>
 				<a href="#E-1" class="serv-btn , T-nav"><div class="serv , dumbells">
 					<h5>Equipments</h5>		
 				</div></a>
