--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 
 	<head>
-		
 		<link rel="stylesheet" type="text/css" href="styles\style.css" /> 
 		<title>Final Project</title>
 	</head>
@@ -21,11 +20,11 @@
 				</nav>
 			</div>
 			
-				<div class="bods , conts">
-					<h1>Z Training</h1>
-					<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  We are a fitness and training center that focuses on pushing you to your absolute limit. Be a member and become an <b>ABSOLUTE</b> unit. </p>
-					<div class="home-btn"><a  href="#about-us"><button class="btn">Learn More</button></a></div>
-				</div>
+			<div class="bods , conts">
+				<h1>Z Training</h1>
+				<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  We are a fitness and training center that focuses on pushing you to your absolute limit. Be a member and become an <b>ABSOLUTE</b> unit. </p>
+				<div class="home-btn"><a  href="#about-us"><button class="btn">Learn More</button></a></div>
+			</div>
 		</div>
 		<div class="about-us">
 			<h1 id="about-us">About Us</h1>
@@ -49,7 +48,7 @@
 			<br>
 			<p>Discover the freedom of working out on your own terms. With a range of innovative fitness apps, online platforms, and portable equipment, you can elevate your fitness journey and achieve your goals on your own time. So why settle for the same old gym routine when you can break free and unlock your full potential?
 			</p>
-			<a  href="pages/Registration.html"><button class="btn">Join Us</button></a>
+			<a  href="#half-way"><button class="btn">Join Us</button></a>
 		</div>
 		<div class="contact">
 			<h1 class="conth">GET IN TOUCH WITH US</h1>
