--- a/pages/Reference.html
+++ b/pages/Reference.html
@@ -7,7 +7,7 @@
 	</head>
 	
 	<body>
-		<div class="container-reference">
+		<div class="container">
 			<div class="nav-bar">
 				<img src= "../src/logo.png" class="logo">
 				<nav>
