--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 			<br>
 			<p>Discover the freedom of working out on your own terms. With a range of innovative fitness apps, online platforms, and portable equipment, you can elevate your fitness journey and achieve your goals on your own time. So why settle for the same old gym routine when you can break free and unlock your full potential?
 			</p>
-			<a  href="#half-way"><button class="btn">Join Us</button></a>
+			<a  href="pages/Registration.html"><button class="btn">Join Us</button></a>
 		</div>
 		<div class="contact">
-			<h1 class="conth">GET IN TOUCH WITH US</h1>
+			<h1 class="conts">GET IN TOUCH WITH US</h1>
 			<form action="#" method="post">
 			  <table class="tindex">
 				<tr>
