--- a/pages/Services.html
+++ b/pages/Services.html
@@ -21,7 +21,7 @@
 			</div>
 		</div>
 		<div>
-			<div class="S-section , content-wrapper">
+			<div class="S-section ">
 			<div class="S-title"><h1 class="serv-type">Z Training Services</h1></div>
 				<a href="#E-1" class="serv-btn , T-nav"><div class="serv , dumbells">
 					<h5>Equipments</h5>		
