--- a/pages/Registration.html
+++ b/pages/Registration.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<link rel="stylesheet" type="text/css" href="../styles/style.css" /> 
-		<title>Services</title>
+		<title>Registration</title>
 	</head>
 	
 	<body>
